Add change password

--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -148,7 +148,7 @@
 
           <div class="section-title-cart-order d-flex justify-content-between align-items-center">
             <div>
-              Кошик<span class="badge text-bg-danger">1</span>
+              Кошик<span class="badge text-bg-danger">{{cart.total_quantity}}</span>
             </div> <a href="{% url 'user:user_cart' %}">Змінити кошик</a>
           </div>
 
