--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,14 +17,6 @@
 <div class="container-fluid mb-3">
   <div class="row">
     <div class="col-2">
-      <div class="register-benefits">
-        <h2>Чому варто зареєструватись ?</h2>
-        <ul>
-          <li><span class="benefits-numbers">1</span> Ви користуєтесь привілеями та спец. пропозиціями</li>
-          <li><span class="benefits-numbers">2</span> Швидші покупки, завдяки особистим даним</li>
-          <li><span class="benefits-numbers">3</span> Ви отримуєте доступ до історії замовлень</li>
-        </ul>
-      </div>
     </div>
       <div class="col-8">
         <div class="page-login p-3">
@@ -57,13 +49,13 @@
                 <div class="lg-3 text-center">
                   <button type="submit" class="btn">Авторизуватись</button>
                 </div>
-                <div class="another-login text-center">
-                <p>АБО АВТОРИЗУЙТЕСЬ ЧЕРЕЗ</p>
-        
-                <button type="submit" class="btn auth">
-                  <img src={% static "assets/img/google.svg" %} alt="" width="20px"> Google
-                </button>
-              </div> 
+                {% comment %} <div class="another-login text-center">
+                  <p>АБО АВТОРИЗУЙТЕСЬ ЧЕРЕЗ</p>
+          
+                  <button type="submit" class="btn auth">
+                    <img src={% static "assets/img/google.svg" %} alt="" width="20px"> Google
+                  </button>
+              </div>  {% endcomment %}
               </form>            
             </div>
           </div>
