--- a/users/templates/users/orders.html
+++ b/users/templates/users/orders.html
@@ -45,6 +45,8 @@
         </div>
       </div>
       <div class="col-lg-8 col-sm-7">
+        <div class="section-title-orders">Ваші замовлення</div>
+        {% if orders %}
         <div class="orders-content">
           <div class="accordion" id="accordionExample">
             {% for order in orders %}
@@ -77,7 +79,6 @@
                             <td>{{ item.price }}</td>
                             <td>{{ item.order.delivery_address }}</td>
                           </tr>
-
                         </tbody>
                       </table>
                     </div>
@@ -96,6 +97,7 @@
             {% endfor %}
           </div>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
