--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -10,7 +10,7 @@
               <a href="{% url 'main:index' %}">Головна</a>
             </li>
             <li>
-              <span>Авторизація</span>
+              <span>Встановлення нового паролю</span>
             </li>
           </ul>
         </nav>
@@ -22,20 +22,11 @@
       <div class="col-2"></div>
       <div class="col-8">
         <div class="page-login p-3">
-          <h2 class="section-title-login"><span>Зміна паролю</span></h2>
+          <h2 class="section-title-login"><span>Встановити новий пароль</span></h2>
           <div class="row">
             <div class="col-md-6 offset-md-3">
               <form method="post" class="needs-validation" novalidate>
                 {% csrf_token %}
-                <div class="form-group">
-                  <label for="old_password" class="form-label">Старий пароль</label>
-                  <input type="password" class="form-control" name="old_password" id="old_password" required />
-                  {% if form.old_password.errors %}
-                    <div class="alert alert-danger" role="alert">{{ form.old_password.errors }}</div>
-                  {% endif %}
-                  <div class="invalid-feedback">Введіть старий пароль</div>
-                </div>
-
                 <div class="form-group">
                   <label for="new_password1" class="form-label">Новий пароль</label>
                   <input type="password" class="form-control" name="new_password1" id="new_password1" required />
@@ -55,7 +46,7 @@
                 </div>
 
                 <div class="lg-3 text-center">
-                  <button type="submit" class="btn">Змінити пароль</button>
+                  <button type="submit" class="btn">Встановити новий пароль</button>
                 </div>
               </form>
             </div>
