--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -44,7 +44,7 @@
                     Введіть пароль користувача !
                   </div>
 
-                  <div class="forgot-pass text-end"><a href="">Забули пароль ?</a><a href={% url "users:registration" %}>Створити аккаунт</a></div> 
+                  <div class="forgot-pass text-end"><a href="{% url "users:password_reset" %}">Забули пароль ?</a><a href={% url "users:registration" %}>Створити аккаунт</a></div> 
                 </div>
                 <div class="lg-3 text-center">
                   <button type="submit" class="btn">Авторизуватись</button>
